--- a/dev-site.yml
+++ b/dev-site.yml
@@ -2,9 +2,9 @@ runtime:
   cache_dir: ./.cache/antora
 
 site:
-  title: Template Tutorial(Dev Mode)
-  url: http://localhost:3000/rhs-build-course/index.html
-  start_page: template-tutorial::index.adoc
+  title: Ansible Operator Road Trip Guide
+  url: http://localhost:3000/ansible-operator-road-trip-guide/index.html
+  start_page: ansible-operator-road-trip-guide::index.adoc
 
 content:
   sources:
@@ -13,14 +13,18 @@ content:
       start_path: documentation
 asciidoc:
   attributes:
-    title: Template Tutorial(Dev Mode)
+    #title: Ansible Operator Road Trip Guide
+    git_base: https://github.com/atarazana 
+    git_uri: ansible-operator-road-trip-guide  
+    git_ref: main
   extensions:
     - ./lib/remote-include-processor.js
     - ./lib/tab-block.js
 ui:
   bundle:
-    url: https://github.com/redhat-scholars/course-ui/releases/download/v0.1.1/ui-bundle.zip
+    url: https://github.com/redhat-scholars/course-ui/releases/download/v0.1.8/ui-bundle.zip
     snapshot: true
   supplemental_files: ./supplemental-ui
+  
 output:
   dir: ./gh-pages
