--- a/documentation/antora.yml
+++ b/documentation/antora.yml
@@ -1,6 +1,6 @@
 name: ansible-operator-road-trip-guide
 title: Ansible Operator Road Trip
-version: master
+version: main
 nav:
   - modules/ROOT/nav.adoc
 
